# zxp-native-usb-adapter-64bit-hack

./: CMakeLists.txt  README.md  mqalloc.c
.github/workflows/: cmake-windows.yml
